# opencv_smile_train

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  nnet.cpp
